@@ -135,6 +135,10 @@ determined by the file extension of \fIarchive_new\fP.
 .PP
 Show all supported archive formats (i.e. which helper applications
 are available).
+.SS version
+\fBpatool\fP \version\fP
+.PP
+Print version information.
 .SH HELP OPTION
 Specifying the help option displays help for patool itself, or a
 command.
